# dto/src/main/java/org/jboss/pnc/dto/BuildConfigurationRevision.java
@@ -89,8 +89,7 @@ public class BuildConfigurationRevision extends BuildConfigurationRevisionRef {
             BuildType buildType,
             User creationUser,
             User modificationUser,
-            String defaultAlignmentParams,
-            boolean brewPullActive) {
+            String defaultAlignmentParams) {
         super(
                 id,
                 rev,
@@ -100,8 +99,7 @@ public class BuildConfigurationRevision extends BuildConfigurationRevisionRef {
                 creationTime,
                 modificationTime,
                 buildType,
-                defaultAlignmentParams,
-                brewPullActive);
+                defaultAlignmentParams);
         this.scmRepository = scmRepository;
         this.project = project;
         this.environment = environment;
